# py_app

./: .gitignore  .mcp.json  Taskfile.yaml  devbox.json
backend/: .env.example  Taskfile.yaml  docker-compose.yml  pyproject.toml
backend/src/app/: __init__.py  __main__.py  database.py  main.py  middlewares.py  pyobjectid.py  query.py  schemas.py
backend/src/app/ai/: __init__.py  agent.py  agobis.py  kaufvertrag.py  schemas.py  service.py
backend/src/app/auth/: __init__.py  dependencies.py  router.py
backend/src/app/auth/providers/: __init__.py  _protocol.py  auth0.py  azure_ad.py  demo.py  disabled.py
backend/src/app/core/: bootstrap.py  config.py  logs.py
backend/src/app/items/: router.py  schemas.py
backend/src/app/pipeline/: __init__.py  jobs.py  service.py
backend/src/app/web/: __init__.py  pipeline.py  router.py
backend/src/app/web/static/: main.css  ui.js
backend/src/app/web/static/themes/: dark.css  light.css
backend/src/app/web/templates/: base.html  dashboard.html  footer.html  head.html  header.html  modal.html  navbar.html  sidebar.html
backend/src/app/web/templates/partials/: ai_result.html
backend/src/app/web/templates/pipeline/: _editor.html  _gba.html  _outputs.html  detail.html  index.html
backend/tests/: conftest.py  test_health.py  test_pipeline.py  test_pipeline_render.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  theme.ts
frontend/src/components/: Layout.tsx  LoginPage.tsx  RequireAuth.tsx
frontend/src/lib/: api.ts  auth.ts  items.ts
frontend/src/pages/: Dashboard.tsx  Items.tsx  (+1 more)
(+2 files in other folders)
